WebFonts intervention: exclude data url from the intervention metrics

When WebFont resource is provided by data url, do not trigger the
intervention, and do not report MissCachedInterventionResult.

BUG=625063

Review-Url: https://codereview.chromium.org/2109353003
Cr-Commit-Position: refs/heads/master@{#403450}

Former-commit-id: e2f303eb3f571bd2e05de89de3aa08f15437e490